ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    # This tells Google Cloud to create an External Load Balancer to realize this Ingress
    kubernetes.io/ingress.class: gce
    # This enables HTTP connections from Internet clients
    kubernetes.io/ingress.allow-http: "true"
    # This tells Google Cloud to associate the External Load Balancer with the static IP
    # kubernetes.io/ingress.global-static-ip-name: web-ip
    cert-manager.io/issuer: letsencrypt-production
spec:
  tls:
    - secretName: web-ssl
      hosts:
        - "www.xintongthecoder.com"
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: angular-service
                port:
                  number: 80
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: spring-boot-service
                port:
                  number: 8080
